[package]
name = "smoo-host-blocksource-gibblox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
gibblox-core = { version = "=0.0.1-rc.6" }
smoo-host-core = { path = "../../smoo/crates/smoo-host-core" }
