[package]
name = "fastboop-web-single-page-example"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Single-page WebUSB fastboop example."

[dependencies]
anyhow = { workspace = true }
fastboop-core = { workspace = true }
fastboop-environment-web = { workspace = true }
futures-channel = { workspace = true }
futures-util = { workspace = true, features = ["alloc", "async-await"] }
js-sys = { workspace = true }
url = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
console_error_panic_hook = "0.1.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["fmt", "registry", "std"] }
tracing-wasm = "0.2.1"
web-sys = { workspace = true, features = ["Document", "Element", "Event", "HtmlButtonElement", "HtmlInputElement", "Location", "Navigator", "Node", "Usb", "UsbDevice", "Window"] }
