[package]
name = "frontdoor-edge"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
frontdoor-core = { path = "../frontdoor-core", default-features = false }
wstd = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "std", "env-filter"] }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
tar = { version = "0.4", default-features = false }
serde_json = "1"

[profile.release]
lto = true
opt-level = "s"
strip = true
